www/versioned_docs/version-8.6.0/API/classes/RpcError.md
---
id: 'RpcError'
title: 'Class: RpcError<BaseErrorT>'
sidebar_label: 'RpcError'
sidebar_position: 0
custom_edit_url: null
---

## Type parameters

| Name         | Type                                                                                    |
| :----------- | :-------------------------------------------------------------------------------------- |
| `BaseErrorT` | extends [`RPC_ERROR`](../modules.md#rpc_error) = [`RPC_ERROR`](../modules.md#rpc_error) |

## Hierarchy

- [`LibraryError`](LibraryError.md)

  ↳ **`RpcError`**

## Constructors

### constructor

• **new RpcError**\<`BaseErrorT`\>(`baseError`, `method`, `params`): [`RpcError`](RpcError.md)\<`BaseErrorT`\>

#### Type parameters

| Name         | Type                                                                                    |
| :----------- | :-------------------------------------------------------------------------------------- |
| `BaseErrorT` | extends [`RPC_ERROR`](../modules.md#rpc_error) = [`RPC_ERROR`](../modules.md#rpc_error) |

#### Parameters

| Name        | Type         |
| :---------- | :----------- |
| `baseError` | `BaseErrorT` |
| `method`    | `string`     |
| `params`    | `any`        |

#### Returns

[`RpcError`](RpcError.md)\<`BaseErrorT`\>

#### Overrides

[LibraryError](LibraryError.md).[constructor](LibraryError.md#constructor)

#### Defined in

[src/utils/errors/index.ts:50](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L50)

## Properties

### stackTraceLimit

▪ `Static` **stackTraceLimit**: `number`

The `Error.stackTraceLimit` property specifies the number of stack frames
collected by a stack trace (whether generated by `new Error().stack` or
`Error.captureStackTrace(obj)`).

The default value is `10` but may be set to any valid JavaScript number. Changes
will affect any stack trace captured _after_ the value has been changed.

If set to a non-number value, or set to a negative number, stack traces will
not capture any frames.

#### Inherited from

[LibraryError](LibraryError.md).[stackTraceLimit](LibraryError.md#stacktracelimit)

#### Defined in

node_modules/@types/node/globals.d.ts:68

---

### request

• `Readonly` **request**: `Object`

#### Type declaration

| Name     | Type     |
| :------- | :------- |
| `method` | `string` |
| `params` | `any`    |

#### Defined in

[src/utils/errors/index.ts:45](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L45)

---

### baseError

• `Readonly` **baseError**: `BaseErrorT`

#### Defined in

[src/utils/errors/index.ts:51](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L51)

---

### name

• **name**: `string`

#### Inherited from

[LibraryError](LibraryError.md).[name](LibraryError.md#name)

#### Defined in

[src/utils/errors/index.ts:21](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L21)

---

### message

• **message**: `string`

#### Inherited from

[LibraryError](LibraryError.md).[message](LibraryError.md#message)

#### Defined in

www/node_modules/typescript/lib/lib.es5.d.ts:1077

---

### stack

• `Optional` **stack**: `string`

#### Inherited from

[LibraryError](LibraryError.md).[stack](LibraryError.md#stack)

#### Defined in

www/node_modules/typescript/lib/lib.es5.d.ts:1078

---

### cause

• `Optional` **cause**: `unknown`

#### Inherited from

[LibraryError](LibraryError.md).[cause](LibraryError.md#cause)

#### Defined in

www/node_modules/typescript/lib/lib.es2022.error.d.ts:24

## Accessors

### code

• `get` **code**(): `1` \| `10` \| `20` \| `21` \| `24` \| `27` \| `28` \| `29` \| `31` \| `32` \| `33` \| `34` \| `40` \| `41` \| `42` \| `51` \| `52` \| `53` \| `54` \| `55` \| `56` \| `57` \| `58` \| `59` \| `60` \| `61` \| `62` \| `63` \| `64` \| `65` \| `66` \| `67` \| `68` \| `100` \| `150` \| `151` \| `153` \| `154` \| `155` \| `156` \| `157` \| `158` \| `159` \| `160` \| `163`

#### Returns

`1` \| `10` \| `20` \| `21` \| `24` \| `27` \| `28` \| `29` \| `31` \| `32` \| `33` \| `34` \| `40` \| `41` \| `42` \| `51` \| `52` \| `53` \| `54` \| `55` \| `56` \| `57` \| `58` \| `59` \| `60` \| `61` \| `62` \| `63` \| `64` \| `65` \| `66` \| `67` \| `68` \| `100` \| `150` \| `151` \| `153` \| `154` \| `155` \| `156` \| `157` \| `158` \| `159` \| `160` \| `163`

#### Defined in

[src/utils/errors/index.ts:62](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L62)

## Methods

### captureStackTrace

▸ **captureStackTrace**(`targetObject`, `constructorOpt?`): `void`

Creates a `.stack` property on `targetObject`, which when accessed returns
a string representing the location in the code at which
`Error.captureStackTrace()` was called.

```js
const myObject = {};
Error.captureStackTrace(myObject);
myObject.stack; // Similar to `new Error().stack`
```

The first line of the trace will be prefixed with
`${myObject.name}: ${myObject.message}`.

The optional `constructorOpt` argument accepts a function. If given, all frames
above `constructorOpt`, including `constructorOpt`, will be omitted from the
generated stack trace.

The `constructorOpt` argument is useful for hiding implementation
details of error generation from the user. For instance:

```js
function a() {
  b();
}

function b() {
  c();
}

function c() {
  // Create an error without stack trace to avoid calculating the stack trace twice.
  const { stackTraceLimit } = Error;
  Error.stackTraceLimit = 0;
  const error = new Error();
  Error.stackTraceLimit = stackTraceLimit;

  // Capture the stack trace above function b
  Error.captureStackTrace(error, b); // Neither function c, nor b is included in the stack trace
  throw error;
}

a();
```

#### Parameters

| Name              | Type       |
| :---------------- | :--------- |
| `targetObject`    | `object`   |
| `constructorOpt?` | `Function` |

#### Returns

`void`

#### Inherited from

[LibraryError](LibraryError.md).[captureStackTrace](LibraryError.md#capturestacktrace)

#### Defined in

node_modules/@types/node/globals.d.ts:52

---

### prepareStackTrace

▸ **prepareStackTrace**(`err`, `stackTraces`): `any`

#### Parameters

| Name          | Type         |
| :------------ | :----------- |
| `err`         | `Error`      |
| `stackTraces` | `CallSite`[] |

#### Returns

`any`

**`See`**

https://v8.dev/docs/stack-trace-api#customizing-stack-traces

#### Inherited from

[LibraryError](LibraryError.md).[prepareStackTrace](LibraryError.md#preparestacktrace)

#### Defined in

node_modules/@types/node/globals.d.ts:56

---

### isType

▸ **isType**\<`N`, `C`\>(`typeName`): this is RpcError\<RPC_ERROR_SET[N] & Object\>

Verifies the underlying RPC error, also serves as a type guard for the _baseError_ property

#### Type parameters

| Name | Type                                                                                                                                                                                                                                                                                                                                                                                    |
| :--- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `N`  | extends keyof [`RPC_ERROR_SET`](../modules.md#rpc_error_set)                                                                                                                                                                                                                                                                                                                            |
| `C`  | extends `1` \| `10` \| `20` \| `21` \| `24` \| `27` \| `28` \| `29` \| `31` \| `32` \| `33` \| `34` \| `40` \| `41` \| `42` \| `51` \| `52` \| `53` \| `54` \| `55` \| `56` \| `57` \| `58` \| `59` \| `60` \| `61` \| `62` \| `63` \| `64` \| `65` \| `66` \| `67` \| `68` \| `100` \| `150` \| `151` \| `153` \| `154` \| `155` \| `156` \| `157` \| `158` \| `159` \| `160` \| `163` |

#### Parameters

| Name       | Type |
| :--------- | :--- |
| `typeName` | `N`  |

#### Returns

this is RpcError\<RPC_ERROR_SET[N] & Object\>

**`Example`**

```typescript
SomeError.isType('UNEXPECTED_ERROR');
```

#### Defined in

[src/utils/errors/index.ts:73](https://github.com/starknet-io/starknet.js/blob/v8.6.0/src/utils/errors/index.ts#L73)
